[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapreduce"
description = "EECS 442 Project. University of Michigan, Winter 2024."
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "bs4",
    "click",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "markdown",
    "mypy",
    "pytest",
    "pytest-mock",
]

[project.scripts]
# TODO: Finish scripts. Examples:
mapreduce-manager = "mapreduce.manager.__main__:main"
mapreduce-worker = "mapreduce.worker.__main__:main"
mapreduce-submit = "mapreduce.submit:main"

[tool.setuptools]
# TODO: change packages
packages = ["mapreduce", "mapreduce.manager", "mapreduce.worker", "mapreduce.utils"]

[tool.pylint.typecheck]
# List of decorators that change the signature of a decorated function.
# We need this because Click decorators mutate the main() function.
signature-mutators = ["command", "option", "argument"]

[tool.pylint.design]
# Maximum number of arguments for function / method.
max-args = 6
# Minimum number of public methods for a class (see R0903).
min-public-methods = 1
